--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   },
   "dependencies": {
     "gatsby": "^3.0.1",
+    "gatsby-plugin-image": "^1.1.1",
+    "gatsby-plugin-sharp": "^3.1.1",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-remark": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
